force-app/main/default/objects/Slab_Price__c/Slab_Price__c.object-meta.xml
<CustomObject>
    <label>Slab Price</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Slab Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slab Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>