force-app/main/default/objects/Slab_Price__c/fields/End_Range__c.field-meta.xml
<CustomField>
    <fullName>End_Range__c</fullName>
    <label>End Range</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>