force-app/main/default/objects/Slab_Price__c/fields/Infinity__c.field-meta.xml
<CustomField>
    <fullName>Infinity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infinity</label>
    <type>Checkbox</type>
</CustomField>