force-app/main/default/objects/Slab_Price__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Slab Prices</relationshipLabel>
    <relationshipName>Slab_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>