force-app/main/default/objects/Slab_Price__c/fields/Slab__c.field-meta.xml
<CustomField>
    <fullName>Slab__c</fullName>
    <label>Slab</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>