force-app/main/default/objects/Slab_Price__c/fields/Start_Range__c.field-meta.xml
<CustomField>
    <fullName>Start_Range__c</fullName>
    <label>Start Range</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>