force-app/main/default/objects/Slab_Price__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>RTO</fullName>
            </value>
            <value>
                <fullName>DTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>