force-app/main/default/objects/Slab_Price__c/fields/Zone_C_N1_Custom_Price__c.field-meta.xml
<CustomField>
    <fullName>Zone_C_N1_Custom_Price__c</fullName>
    <label>Zone C N1 - Custom Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>